Link the stylesheet

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor Game</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h3>Please click a button to make a choice.</h3>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <div id="scoreBox">
+      <div id="playerScore"></div>
+      <div id="computerScore"></div>
+    </div>
+    >
   </body>
 </html>
