Add score boxes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
     <div id="scoreBox">
-      <div id="playerScore"></div>
-      <div id="computerScore"></div>
+      <div id="player">
+        <div id="playerName">Player</div>
+        <div id="playerScore">0</div>
+      </div>
+      <div id="computer">
+        <div id="computerName">Computer</div>
+        <div id="computerScore">0</div>
+      </div>
     </div>
-    >
   </body>
 </html>
