--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   </head>
   <body>
     <h3>Please click a button to make a choice.</h3>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
-    <div id="scoreBox">
-      <div id="player">
-        <div id="playerName">Player</div>
-        <div id="playerScore">0</div>
+    <div id="game">
+      <div id="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
       </div>
-      <div id="computer">
-        <div id="computerName">Computer</div>
-        <div id="computerScore">0</div>
+      <div id="scoreBox">
+        <div id="player">
+          <div id="playerName">Player</div>
+          <div id="playerScore">0</div>
+        </div>
+        <div id="computer">
+          <div id="computerName">Computer</div>
+          <div id="computerScore">0</div>
+        </div>
       </div>
     </div>
+    <div id="winnerPlayer" class="hidden">Player wins!</div>
+    <div id="winnerComputer" class="hidden">Computer wins!</div>
   </body>
 </html>
