Add new game function to stop play and add a new game button.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Rock, Paper, Scissors Game</h1>
     <h3>Please click a button to make a choice.</h3>
     <div id="game">
       <div id="buttons">
