Add a computer choice message, as well as a tie notification.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div id="computerScore">0</div>
         </div>
       </div>
+      <div id="computerChoice"></div>
     </div>
     <div id="winnerPlayer" class="hidden">Player wins!</div>
     <div id="winnerComputer" class="hidden">Computer wins!</div>
